--- a/LoadMore/LoadMoreSample/LoadMoreSample/LoadMoreSample.csproj
+++ b/LoadMore/LoadMoreSample/LoadMoreSample/LoadMoreSample.csproj
@@ -67,9 +67,9 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-rc.1.23419.4" />
-		<PackageReference Include="Syncfusion.Maui.Carousel" Version="100.2.18" />
-		<PackageReference Include="Syncfusion.Maui.Core" Version="100.2.232" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Syncfusion.Maui.Carousel" Version="*" />
+		<PackageReference Include="Syncfusion.Maui.Core" Version="*" />
 	</ItemGroup>
 
 </Project>
